# reproduction_airbnb_backend

./: NOTES_DEPLOY.md  README.md  package-lock.json  pyproject.toml  render.yaml
bookings/: admin.py  models.py  serializers.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: admin.py  models.py  serializer.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
common/: models.py
config/: authentication.py  settings.py  urls.py
direct_messages/: admin.py  models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_chattingroom_participants_alter_message_room_and_more.py
experiences/: admin.py  models.py  serializers.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_remove_perk_detail_perk_details_and_more.py  0003_experience_category.py  0004_alter_experience_category_alter_experience_host_and_more.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_initial.py  0002_rename_price_house_pricepernight.py  0003_rename_pricepernight_house_price_per_night_and_more.py
medias/: admin.py  models.py  urls.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_room_and_more.py  (+1 more)
reviews/: admin.py  models.py  serializers.py
rooms/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
wishlists/: admin.py  models.py  serializers.py  urls.py  views.py
(+13 files in other folders)
